--- a/data/interfaces/default/config_search.tmpl
+++ b/data/interfaces/default/config_search.tmpl
@@ -269,8 +269,8 @@
                                 <span class="component-title jumbo">TORRENT Method</span>
                                 <span class="component-desc">
                                 <select name="torrent_method" id="torrent_method">
-                                #set $torrent_method_text = {'blackhole': "Black hole", 'utorrent': "uTorrent", 'transmission': "Transmission", 'downloadstation' : "Download Station"}
-                                #for $curAction in ('utorrent', 'transmission', 'downloadstation', 'blackhole'):
+                                #set $torrent_method_text = {'blackhole': "Black hole", 'utorrent': "uTorrent", 'transmission': "Transmission", 'downloadstation' : "Download Station", 'deluge': "Deluge"}
+                                #for $curAction in ('utorrent', 'transmission', 'downloadstation', 'deluge', 'blackhole'):
                                   #if $sickbeard.TORRENT_METHOD == $curAction:
                                     #set $torrent_method = "selected=\"selected\""
                                   #else
