--- a/data/interfaces/default/config_providers.tmpl
+++ b/data/interfaces/default/config_providers.tmpl
@@ -87,7 +87,7 @@
                                 <span class="component-title jumbo">Configure Provider:</span>
                                 <span class="component-desc">
                                     #set $provider_config_list = []
-                                    #for $cur_provider in sorted(("btn", "hdbits", "omgwtfnzbs", "tvtorrents", "torrentleech", "thepiratebay", "torrentz", "torrentday", "sceneaccess", "iptorrents", "bithdtv", "torrentshack","speed","kickass","revolutiontt")):
+                                    #for $cur_provider in sorted(("btn", "hdbits", "omgwtfnzbs", "tvtorrents", "torrentleech", "thepiratebay", "torrentz", "torrentday", "sceneaccess", "iptorrents", "bithdtv", "torrentshack","speed","kickass","revolutiontt","linkomanija")):
                                         #set $cur_provider_obj = $sickbeard.providers.getProviderClass($cur_provider)
                                         #if $cur_provider_obj.providerType == $GenericProvider.NZB and not $sickbeard.USE_NZBS:
                                             #continue
@@ -444,6 +444,29 @@
                             <span class="component-title"><i>Note: options with (*) are optional, these variables can be gathered from </i><a href="https://revolutiontt.me/getrss.php" target="_blank">https://revolutiontt.me/getrss.php</a>, it will construct a self made rss if you do not enter these details.</span>
                         </div>
                     </div><!-- /revolutionttDiv //-->
+		    <div class="providerDiv" id="linkomanijaDiv">
+                        <div class="field-pair">
+                            <label class="clearfix">
+                                <span class="component-title">Username:</span>
+                                <input class="component-desc" type="text" name="linkomanija_username" value="$sickbeard.LINKOMANIJA_USERNAME" size="40" />
+                            </label>
+                        </div>
+                        <div class="field-pair">
+                            <label class="clearfix">
+                                <span class="component-title">Password:</span>
+                                <input class="component-desc" type="password" name="linkomanija_password" value="$sickbeard.LINKOMANIJA_PASSWORD" size="40" />
+                            </label>
+                        </div>
+                        <div class="field-pair">
+                            <label class="clearfix">
+                                <span class="component-title">RSS Hash (*):</span>
+                                <input class="component-desc" type="text" name="linkomanija_rsshash" value="$sickbeard.LINKOMANIJA_RSSHASH" size="40" /></b>
+                            </label>
+                        </div>
+                        <div class="field-pair">
+                            <span class="component-title"><i>Note: options with (*) are optional, this is generated from </i><a href="http://www.linkomanija.net/getrss.php" target="_blank">http://www.linkomanija.net/getrss.php</a></span>
+                        </div>
+                    </div><!-- /linkomanijaDiv //-->                    
 <!-- end div for editing providers -->
             
                     </fieldset>
